packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.scss
@use '../../../shared/shared-sizes';
@use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
@use '@elvia/elvis/src/variables/typography.scss' as typography;

.header {
  position: fixed;
  height: 64px;
  width: 100%;
  top: 0px;
  box-sizing: border-box;
  background-color: var(--e-white);
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  .logo {
    display: inline-flex;
    justify-content: flex-start;
    align-items: center;
    cursor: pointer;
    margin-left: 24px;

    img {
      height: 26px;
    }
  }

  .closing {
    display: inline-flex;
    align-items: center;
  }
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: fixed;
  width: 100%;
  margin-top: 64px;
  background-color: var(--e-white);
  box-sizing: border-box;
  padding-top: 48px;

  @include breakpoints.breakpoint-up(Mobile) {
    padding-top: 32px;
  }

  &::before {
    content: '';
    left: -50%;
    border-radius: 50%;
    position: absolute;
    background-color: var(--e-white);
    width: 200vw;
    height: calc(100% + 8px);
    z-index: -1;
  }

  .menu {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    background-color: var(--e-white);
    width: 50%;

    @include breakpoints.breakpoint-up(Mobile) {
      width: 80%;
    }

    .menu-items {
      .links {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        cursor: pointer;

        .text {
          display: flex;
          @include typography.typography('title-caps');
        }

        .links-icon {
          display: flex;
          align-items: center;
        }
      }

      .divider {
        border: 1px solid var(--e-grey-10);
        width: 100%;
        border-radius: 25px;
      }
    }

    .version {
      display: flex;
      flex-direction: column;
      align-items: center;
      font-family: 'Red Hat Text', Verdana, sans-serif;
      font-style: normal;
      font-weight: 500;
      font-size: 12px;
      line-height: 14px;
      letter-spacing: 0.2px;
      color: var(--e-black);
      padding-top: 40px;
    }
  }
}

